--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+apipkg==1.5
 atomicwrites==1.4.0
 attrs==20.2.0
+auto-gitignore==1.0.0
 backports.functools-lru-cache==1.6.1
 certifi==2020.6.20
 chardet==3.0.4
@@ -7,6 +9,7 @@ colorama==0.4.3
 configparser==5.0.0
 crayons==0.4.0
 docopt==0.6.2
+execnet==1.7.1
 future==0.18.2
 idna==2.10
 iniconfig==1.0.1
@@ -17,6 +20,8 @@ prompt-toolkit==3.0.7
 py==1.9.0
 pyparsing==2.4.7
 pytest==6.0.2
+pytest-forked==1.3.0
+pytest-xdist==2.1.0
 requests==2.24.0
 selene==2.0.0a33
 selenium==3.141.0
